# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.762.2.9 2008/10/28 17:55:03 tt Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

2.3.4 (2008/??/??)
 - (2008/10/28) Fixed bug# 3366 -TicketEvent ArticleFreeTextSet does not know
    ArticleID.
 - (2008/10/20) Fixed bug# 3391 - Filter out hazardous characters from redirects.
 - (2008/10/16) Fixed bug# 2415 - Wrong info after editing salutation.
 - (2008/10/15) Fixed bug# 3379 - Documentation of packages got not shown in
    admin package manager.
 - (2008/10/15) Updated Chinese translation, thanks to Never Min!
 - (2008/10/13) Fixed bug# 3373 - Postmaster match filter is losing [***] on
    second time.
 - (2008/10/13) Fixed bug# 3367 - Escalation of first response gets not changed
    on note-external (which was working in OTRS 2.2.x).
 - (2008/10/09) Fixed bug# 3358 - Removed useless error warning in stats module.

2.3.3 (2008/10/02)
 - (2008/09/30) Fixed bug# 3335 - No user name in pdf - print of stats-report
 - (2008/09/29) Updated Italian translation, thanks to Remo Catelotti!
 - (2008/09/29) Fixed bug# 3315 - GenericAgent does not work with pending time
    reached for x units.
 - (2008/09/29) Fixed bug# 3314 - Escalation time not updated correctly, e. g.
    ticket get's not escalated if one escalation time got solved.
 - (2008/09/25) Updated Chinese translation, thanks to Never Min!
 - (2008/09/24) Fixed bug# 3322 - After updating SysConfig I get: Can't use
    string ("0") as a HASH ref while "strict refs" in use at
    Kernel/System/Config.pm line 716.
 - (2008/09/24) Fixed bug# 3321 - "(" or ")" in user name is braking ldap query
    for agent and customer auth.
 - (2008/09/13) Fixed bug# 3289 - Error when trying to delete an answer (with