@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.762.2.9 2008/10/28 17:55:03 tt Exp $
+# $Id: CHANGES,v 1.762.2.10 2008/10/28 18:44:34 tt Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.3.4 (2008/??/??)
+ - (2008/10/28) Fixed bug# improved error logging of new postmaster tickets for
+    invalid priority names
  - (2008/10/28) Fixed bug# 3366 -TicketEvent ArticleFreeTextSet does not know
     ArticleID.
  - (2008/10/20) Fixed bug# 3391 - Filter out hazardous characters from redirects.
